# byt

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  byt.release.toml  justfile
.beads/: issues.jsonl
.github/workflows/: byt-release.yml  image.yml  release.yml
.pi/todos/: 019eb6c7-0607-7218-b8cc-02b8c87ad14e.json  0580f92e-fb5c-432f-997b-db3f5985c9f2.json
.trx/: config.toml  events.jsonl  issues.jsonl
examples/: config.schema.json  config.toml
src/: main.rs  release.rs
