[package]
name = "byt"
version = "0.4.1"
edition = "2024"
description = "Byteowlz meta-tool for cross-repo management, catalog generation, and governance"
authors = ["Byteowlz"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
config = { version = "0.15", features = ["toml"] }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
toml = "0.8"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
git2 = "0.19"
glob = "0.3"
which = "8.0.0"
hostname = "0.4.2"
